tdf#99783 Invalidate SID_ATTR_CHAR_OVERLINE

Change-Id: I450f3922408879ec812e4a92fc4950388ce00a73
(cherry picked from commit 4154f8bc5a905a39f18914613788b3a17f139745)